tests/NormalTests/paczka1/small_fuzzy/85579906.err
Error in line 1: BZ9sO S53 70,8
Error in line 4: WdPd1 S53 0,5
Error in line 2: BZ9sO S176 50,4
Error in line 10: BZ9sO A12 17,1
